; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_AWindowHandler_setVideoLayout.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/android/extr_utils.c_AWindowHandler_setVideoLayout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@VLC_EGENERIC = common dso_local global i32 0, align 4
@CallVoidMethod = common dso_local global i32 0, align 4
@setVideoLayout = common dso_local global i32 0, align 4
@VLC_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @AWindowHandler_setVideoLayout(%struct.TYPE_4__* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_4__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @assert(i32 %19)
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %9, align 8
  %22 = call i32* @AWindowHandler_getEnv(%struct.TYPE_4__* %21)
  store i32* %22, i32** %16, align 8
  %23 = load i32*, i32** %16, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %27, label %25

25:                                               ; preds = %7
  %26 = load i32, i32* @VLC_EGENERIC, align 4
  store i32 %26, i32* %8, align 4
  br label %38

27:                                               ; preds = %7
  %28 = load i32, i32* @CallVoidMethod, align 4
  %29 = load i32, i32* @setVideoLayout, align 4
  %30 = load i32, i32* %10, align 4
  %31 = load i32, i32* %11, align 4
  %32 = load i32, i32* %12, align 4
  %33 = load i32, i32* %13, align 4
  %34 = load i32, i32* %14, align 4
  %35 = load i32, i32* %15, align 4
  %36 = call i32 @JNI_ANWCALL(i32 %28, i32 %29, i32 %30, i32 %31, i32 %32, i32 %33, i32 %34, i32 %35)
  %37 = load i32, i32* @VLC_SUCCESS, align 4
  store i32 %37, i32* %8, align 4
  br label %38

38:                                               ; preds = %27, %25
  %39 = load i32, i32* %8, align 4
  ret i32 %39
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @AWindowHandler_getEnv(%struct.TYPE_4__*) #1

declare dso_local i32 @JNI_ANWCALL(i32, i32, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
